<resources>
    <string name="app_name">PracticaFacturas</string>

    <!-- Titulos de la toolbar -->
    <string name="mainActivity_title">Facturas</string>
    <string name="filterActivity_title">Filtrar facturas</string>

    <!-- MainActivity -->
    <string name="invoive_status">Pendiente de pago</string>
    <string name="empty_txt">No hay facturas</string>
    <string name="txt_retromock_status">Activar retromock:</string>

    <!-- AlertDialog al pulsar sobre una factura -->
    <string name="aDialog_title">Información</string>
    <string name="aDialog_message">Esta funcionalidad aún no está disponible</string>
    <string name="aDialog_button">Cerrar</string>

    <!-- FilterActivity titulos -->
    <string name="title_date_issue">Con fecha de emisión</string>
    <string name="title_price">Por un importe</string>
    <string name="title_status">Por estado</string>

    <!-- FilterActivity textViews -->
    <string name="txt_from_date">Desde:</string>
    <string name="txt_to_date">Hasta:</string>

    <!-- FilterActivity slider -->
    <string name="txt_min_value_slider">0</string>

    <!-- FilterActivity checkboxes -->
    <string name="chBox_paid">Pagadas</string>
    <string name="chBox_cancelled">Anuladas</string>
    <string name="chBox_fixed_fee">Cuota Fija</string>
    <string name="chBox_pending_payment">Pendientes de pago</string>
    <string name="chBox_payment_plan">Plan de pago</string>

    <!-- FilterActivity botones -->
    <string name="btn_date">día/mes/año</string>
    <string name="btn_apply_filters">Aplicar</string>
    <string name="btn_delete_filters">Eliminar filtros</string>
</resources>