<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activities.FilterActivity">

    <!-- Toolbar general -->
    <include
        android:id="@+id/includeFilterActivity"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeFilterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_date_issue"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txt_from_date"
                app:layout_constraintStart_toStartOf="@+id/tvTitleDate"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDate" />

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/txt_to_date"
                app:layout_constraintBottom_toBottomOf="@+id/tvFrom"
                app:layout_constraintStart_toEndOf="@+id/tvFrom"
                app:layout_constraintTop_toTopOf="@+id/tvFrom" />

            <Button
                android:id="@+id/btnDateFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/btn_date"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                app:layout_constraintStart_toStartOf="@+id/tvFrom"
                app:layout_constraintTop_toBottomOf="@+id/tvFrom" />

            <Button
                android:id="@+id/btnDateTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/btn_date"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                app:layout_constraintStart_toStartOf="@+id/tvTo"
                app:layout_constraintTop_toBottomOf="@+id/tvTo" />

            <!-- View como linea separadora -->
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@+id/btnDateFrom" />

            <TextView
                android:id="@+id/tvTitlePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvTitleDate"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/tvMinSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="val min"
                app:layout_constraintStart_toStartOf="@+id/tvTitlePrice"
                app:layout_constraintTop_toBottomOf="@+id/tvTitlePrice" />

            <TextView
                android:id="@+id/tvCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Val slider"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/tvMinSlider"
                app:layout_constraintEnd_toStartOf="@+id/tvMaxSlider"
                app:layout_constraintStart_toEndOf="@+id/tvMinSlider"
                app:layout_constraintTop_toTopOf="@+id/tvMaxSlider" />

            <TextView
                android:id="@+id/tvMaxSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="val max"
                app:layout_constraintBottom_toBottomOf="@+id/tvMinSlider"
                app:layout_constraintEnd_toEndOf="@+id/btnDateTo"
                app:layout_constraintTop_toTopOf="@+id/tvMinSlider" />

            <SeekBar
                android:id="@+id/slider"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/tvMaxSlider"
                app:layout_constraintStart_toStartOf="@+id/tvMinSlider"
                app:layout_constraintTop_toBottomOf="@+id/tvMinSlider" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <TextView
                android:id="@+id/tvTitleStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_status"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvTitleDate"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <CheckBox
                android:id="@+id/cbPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chBox_paid"
                app:layout_constraintStart_toStartOf="@+id/tvTitleStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleStatus" />

            <CheckBox
                android:id="@+id/cbCancelled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chBox_cancelled"
                app:layout_constraintStart_toStartOf="@+id/cbPaid"
                app:layout_constraintTop_toBottomOf="@+id/cbPaid" />

            <CheckBox
                android:id="@+id/cbFixedFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chBox_fixed_fee"
                app:layout_constraintStart_toStartOf="@+id/cbCancelled"
                app:layout_constraintTop_toBottomOf="@+id/cbCancelled" />

            <CheckBox
                android:id="@+id/cbPendingPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chBox_pending_payment"
                app:layout_constraintStart_toStartOf="@+id/cbFixedFee"
                app:layout_constraintTop_toBottomOf="@+id/cbFixedFee" />

            <CheckBox
                android:id="@+id/cbPaymentPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chBox_payment_plan"
                app:layout_constraintStart_toStartOf="@+id/cbPendingPayment"
                app:layout_constraintTop_toBottomOf="@+id/cbPendingPayment" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Botones de aplicar y eliminar filtros -->
    <Button
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_apply_filters"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_delete_filters"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnApply"
        app:layout_constraintStart_toStartOf="@+id/btnApply"/>

</androidx.constraintlayout.widget.ConstraintLayout>